--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="wrap d-none">
+    <div class="container">
         <div class="header">
             <div class="logo"><img src="logo.svg" alt=""></div>
             <ul class="selection">
@@ -22,13 +22,14 @@
             <div class="space"></div>
         </div>
     </div>
-    <div class=" part-area d-none"　style="">
-        <div class="wrap">
-            <div class=" body-banner ">
+    <div class=" part-area  "　style="">
+        <div class="container">
+            <div class="body-banner">
 
 
                 <img src="quote-left.png">
-                <h2 class="lh-4">讓使用者在觀賞與使用的旅程中，發現設計的價值<br>而我在設計與開發的過程中，看見自己的價值</h2><img src="quote-right.png">
+                <h2 class="lh-4">讓使用者在觀賞與使用的旅程中，<div class="movelocate">發現設計的價值</div><br>而我在設計與開發的過程中，<div class="movelocate">看見自己的價值</div></h2>
+                <div class="quote"><img src="quote-right.png"></div>
             </div>
         </div>
 
@@ -53,11 +54,11 @@
         </div>
     </div>
 
-    <div class="">
+   
         <div class="container">
             <ul class="card-list">
                 <li class="card">
-                    <div class="image"><a><img src="work-image1.png" alt="" style="max-width: 40%;"></a></div>
+                    <div class="image"><a><img src="work-image1.png" alt="" style="max-width: 100%;"></a></div>
                     <div class="item">
                         <h1 class="lh-2">星際旅行訂票平台</h1>
                         <p class=" fs-6 lh-5">悠遊宇宙的夢想，從這裡開始實現</p>
@@ -69,7 +70,7 @@
                     </ul>
                 </li>
                 <li class="card">
-                    <div class="image"><a><img src="work-image2.png" alt="" style="max-width: 40%"></a></div>
+                    <div class="image"><a><img src="work-image2.png" alt="" style="max-width: 100%;"></a></div>
                     <div class="item">
                         <h1 class="lh-2">理財App</h1>
                         <p class=" fs-6 lh-5">連動帳戶與行動支付，讓AI提供您最好的理財建議</p>
@@ -80,8 +81,8 @@
                         <li class="btn fs-6 lh-5">React</li>
                     </ul>
                 </li>
-                <!-- <li class="card">
-                    <div class="image"><a><img src="work-image3.png" alt=""></a></div>
+                <li class="card">
+                    <div class="image"><a><img src="work-image3.png" alt=""  style="max-width: 100%;"></a></div>
                     <div class="item">
                         <h1 class="lh-2">醫美診所官網</h1>
                         <p class=" fs-6 lh-5">永保青春的秘密，從粹究開始</p>
@@ -93,7 +94,7 @@
                     </ul>
                 </li>
                 <li class="card">
-                    <div class="image"><a><img src="work-image4.png" alt=""></a></div>
+                    <div class="image"><a><img src="work-image4.png" alt=""  style="max-width: 100%;"></a></div>
                     <div class="item">
                         <h1 class="lh-2">美美美早餐店POS機 UI Design</h1>
                         <p class=" fs-6 lh-5">訂單送單一目瞭然，自動報表分析好輕鬆</p>
@@ -105,7 +106,7 @@
                     </ul>
                 </li>
                 <li class="card">
-                    <div class="image"><a><img src="work-image5.png" alt=""></a></div>
+                    <div class="image"><a><img src="work-image5.png" alt=""  style="max-width: 100%;"></a></div>
                     <div class="item">
                         <h1 class="lh-2">電影院訂票系統</h1>
                         <p class=" fs-6 lh-5">三步驟完成訂票，電腦手機都支援</p>
@@ -117,7 +118,7 @@
                     </ul>
                 </li>
                 <li class="card">
-                    <div class="image"><a><img src="work-image6.png" alt=""></a></div>
+                    <div class="image"><a><img src="work-image6.png" alt=""  style="max-width: 100%;"></a></div>
                     <div class="item">
                         <h1 class="lh-2">巧克巧克形象官網設計</h1>
                         <p class=" fs-6 lh-5">三步驟完成訂票，電腦手機都支援</p>
@@ -127,21 +128,21 @@
                         <li class="btn fs-6 lh-5">設計系統</li>
                         <li class="btn fs-6 lh-5">網路電商</li>
                     </ul>
-                </li> -->
+                </li>
             </ul>
         </div>
-        <div class="container d-none">
+        <div class="container">
             <ul class="pagination">
                 <li class="squ fs-4 lh-1"><a href="#" class="bk-1">1</a></li>
                 <li class="squ fs-4 lh-1"><a href="#">2</a></li>
                 <li class="squ fs-4 lh-1"><a href="#">3</a></li>
             </ul>
         </div>
-    </div>
-    <div class="footerImg d-none">
+   
+    <!-- <div class="footerImg">
         <img src="footer-bg-lg.png" style="max-width: 100%;">
-    </div>
-    <div class="wrap footer d-none">
+    </div> -->
+    <div class="container footer">
 
         <div class="footerLeft">
             <div class="logo"><img src="logo.svg"></div>
